tests/snapshots/run_wpt_conformance__trtx_pad_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pad.https.any.js",
    "pad float16 1D constant tensor default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to build graph: Runtime error: Failed to build serialized network\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  consts {\n    operand_0: f16[9] @bytes([177, 77, 75, 205, 187, 213, 55, 76, 144, 83, 105, 212, 149, 211, 252, 209, 76, 84]);\n  }\n\n  nodes {\n    [padOutput] = pad(operand_0, label=\"\", mode=\"\", value=null);\n  }\n\n  outputs { padOutput; }\n}\n",
        ),
    },
)
