tests/snapshots/run_wpt_conformance__trtx_pad_float16_1D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "pad.https.any.js",
    "pad float16 1D tensor default options",
    "trtx",
    Failed {
        msg: Some(
            "Failed to write tensor: DriverError(CUDA_ERROR_INVALID_VALUE, \"invalid argument\")",
        ),
    },
)
