tests/snapshots/run_wpt_conformance__trtx_pad_float16_3D_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "pad.https.any.js",
    "pad float16 3D tensor default options",
    "trtx",
    "PASS",
)
